# llm-conduit

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/conduit/: __init__.py  client.py  exceptions.py  retry.py
src/conduit/config/: __init__.py  base.py  ollama.py  openrouter.py  vllm.py
src/conduit/models/: __init__.py  messages.py
src/conduit/providers/: __init__.py  base.py  ollama.py  openai_format.py  openrouter.py  streaming.py  utils.py  vllm.py
src/conduit/tools/: __init__.py  schema.py
src/conduit/utils/: __init__.py  streaming.py
tests/integration/: conftest.py  test_live_endpoints.py  test_openrouter_live.py
tests/unit/: conftest.py  test_package_typing.py
tests/unit/client/: test_overrides.py  test_provider_registry.py  test_retry.py  test_stream_aggregation.py  test_stream_events.py  test_sync_streaming.py
tests/unit/config/: test_config_validation.py
tests/unit/errors/: test_error_handling.py
tests/unit/providers/: test_request_building.py  test_response_parsing.py
tests/unit/streaming/: test_chunk_filter.py  test_streaming_normalization.py
tests/unit/tools/: test_schema.py
