[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "conduit"
version = "0.1.0"
description = "Provider-aware Python LLM client for vLLM, Ollama, and OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Conduit Contributors" }
]
keywords = ["llm", "vllm", "ollama", "openrouter", "chat", "tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/conduit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
  "integration: marks tests that hit live provider endpoints",
]
